@@ -1,8 +1,9 @@
+MAX=$1
 DOC_ROOT=/Users/oubiwann/Sites/
 FILE_PREFIX=twistd
 PORT_PREFIX=700
 cd /tmp
-for NUM in 1 2 3 4
+for ((NUM = 1; NUM <= $MAX; NUM++))
     do
     rm ${FILE_PREFIX}${NUM}.pid
     rm ${FILE_PREFIX}${NUM}.log
