@@ -35,5 +35,8 @@ $Id: pythondirector.dtd,v 1.4 2003/10/09 08:20:59 anthonybaxter Exp $
                password CDATA #REQUIRED
                access CDATA #REQUIRED>
 
+<!ELEMENT manager EMPTY>
+<!ATTLIST manager hostCheckInterval CDATA>
+
 <!ELEMENT logging EMPTY>
 <!ATTLIST logging file CDATA #REQUIRED>
