@@ -4,6 +4,7 @@
 * Added some initial stress test data.
 * Updatd TODO with a tentative plan for a benchmark lab.
 * Removed completed tasks from the TODO.
+* Added support for a manager section and updated the corresponding docs.
 
 2008.06.21 oubiwann
 
